# irg_panda

./: README.md  dependencies.rosinstall
irg_panda_control/irg_panda_collision_control/: CMakeLists.txt  README.md  package.xml  setup.py
irg_panda_control/irg_panda_collision_control/data/: output.csv
irg_panda_control/irg_panda_collision_control/nodes/: publish_pointcloud.py
irg_panda_control/irg_panda_collision_control/scripts/: cartHBSCollisionControl_DS_node.py  cartHBSModulation_SVM_class.py  cartHBSModulation_class.py  cartHBS_SVM_CollisionControl_DS_node.py  gammaSVM_evaluation_node.py  gamma_evaluation_node.py  learn_gamma_fn.py  modulation.py  modulation_ros.py  obstacles.py  publish_pointcloud.py  pyBullet_samplerBridge_node.py  pyBullet_samplerBridge_node_loop.py  pyBullet_samplerBridge_node_working.py  svm_2d_env.py
irg_panda_control/irg_panda_collision_control/src/: ball_trajectory_node.cpp  gamma_samples_node.cpp
irg_panda_control/irg_panda_control/: CMakeLists.txt  package.xml
irg_panda_control/irg_panda_motion_control/: CMakeLists.txt  package.xml  setup.py
irg_panda_control/irg_panda_motion_control/nodes/: cartNullDS_publisher_node.py  cartVelocityControl_DS_node.py  cartVelocityControl_timeDep_node.py  jointPositionControl_JJDS_node.py  jointPositionControl_JTDS_node.py  jointVelocityControl_JJDS_node.py  jointVelocityControl_JTDS_node.py  jointVelocityControl_timeDep_node.py  testJointVelocity_node.py
irg_panda_control/irg_panda_torque_control/nodes/: taskPDcontroller.py
irg_panda_description/config/: irg_rviz.config.rviz
(+18 files in other folders)
