<package format="2">
  <name>irg_panda_control</name>
  <version>0.0.1</version>
  <description>irg_panda_control meta-package</description>

  <maintainer email="nadiafig@mit.edu"> Nadia Figueroa </maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>irg_panda_motion_control</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
